fix: URI를 사용하여 URL 생성 방식 개선